2009-10-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ido.el (ido-everywhere): Use define-minor-mode.

	* buff-menu.el (list-buffers, ctl-x-map):
	Mark the entry points with ;;;###autoload cookies.


2009-10-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-dir-extra-headers): Set the branch name
	correctly in the detached head case.
	(vc-git-print-log): Remove unused binding.

	* vc.el (vc-responsible-backend): When a directory is passed for
	for registration create a VC repository if no backend is
	responsible for the directory argument.
	(vc-deduce-fileset): Tell vc-responsible-backend to register.

	* vc.el: Move comments about RCS and SCCS ...
	* vc-rcs.el:
	* vc-sccs.el: ... here, respectively.

2009-10-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion--file-name-table): Return nil if there's
	no file completion, even if substitute-in-file-name changed
	the string (bug#4708).

2009-10-13  Juri Linkov  <juri@jurta.org>

	* files-x.el (read-file-local-variable-value): Don't filter out
	minor modes from mode name completion (bug#4664).

2009-10-13  Juanma Barranquero  <lekktu@gmail.com>

	* international/mule-cmds.el (ucs-names): Remove exclusion of
	"Enclosed Ideographic Supplement" range (U+1F200..U+1F2FF).

2009-10-13  Kenichi Handa  <handa@m17n.org>

	* international/uni-name.el: Regenerated.

2009-10-13  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs-mode): Fix last change.  (`revert-buffer-function'
	should be automatically buffer-local, but isn't.)

2009-10-12  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-next-error-function): Fix the
	timestamps if the buffer has been visited before.

	(compilation-mode-font-lock-keywords): Do not prepend "^ *" to
	non-anchored patterns, like the perl one (bug#3928).

2009-10-12  Glenn Morris  <rgm@gnu.org>

	* net/tramp-smb.el (tramp-smb-do-file-attributes-with-stat):
	Let-bind `size'.

2009-10-12  Juanma Barranquero  <lekktu@gmail.com>
